--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,36 @@
 {
-  "name":"Valentín",
-  "short_name":"Valentín",
-  "start_url":"index.html",
-  "display":"standalone",
-  "background_color":"#e591ff",
-  "theme_color":"black",
+  "name": "Valentín",
+  "short_name": "Valentín",
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#e591ff",
+  "theme_color": "black",
   "scope": ".",
-  "description":"El camino de Valentín",
-  "icons":[
+  "description": "El camino de Valentín",
+  "icons": [
     {
-      "src":"icono-192.png",
-      "sizes":"192x192",
-      "type":"image/png"
+      "src": "public/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src":"icono.png",
-      "sizes":"512x512",
-      "type":"image/png"
+      "src": "public/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "public/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "public/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
